Alter integration tests from old buildpack to new
Signed-off-by: Dave Goddard <dave@goddard.id.au>

--- a/manifest.yml
+++ b/manifest.yml
@@ -16,7 +16,7 @@ url_to_dependency_map:
   version: "$1"
 - match: openjdk1.8-latest
   name: openjdk1.8-latest
-  version: 1.8.0_141
+  version: 1.8.0
 - match: node-v(\d+\.\d+\.\d+)
   name: node
   version: "$1"
@@ -56,7 +56,7 @@ dependency_deprecation_dates:
   link: https://www.ruby-lang.org/en/news/2017/04/01/support-of-ruby-2-1-has-ended/
 dependencies:
 - name: openjdk1.8-latest
-  version: 1.8.0_141
+  version: 1.8.0
   uri: https://buildpacks.cloudfoundry.org/dependencies/manual-binaries/jruby/openjdk-1.8.0_141-68d0948c.tar.gz
   md5: 68d0948ce2a31b2a53ecfdac6395dad5
   cf_stacks:
